# disney_demo

./: CMakeLists.txt  README.md  disney_demo_controllers.xml  main_bah_a_la_la_la.cpp  package.xml
config/: controllers_select.yaml  parameters.yaml  posmot.yaml  vito_controller_disney.yaml
include/: commands.h  disneyDemo.h  disney_demo_controller_mt.h  disney_demo_controller_mt_effort.h  qbmove_communications.h
launch/: display.launch  vito_disney.launch
src/: audio.cpp  disneyDemo.cpp  main.cpp  qbmove_communications.cpp  read_hand.cpp  read_hand_double.cpp  read_hand_mattia.cpp  teleoperation_controller_mt.cpp  teleoperation_controller_mt_effort.cpp
